--- a/starter/app/build.gradle
+++ b/starter/app/build.gradle
@@ -61,14 +61,15 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
     implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
 
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.7"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1"
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
 
     implementation "androidx.recyclerview:recyclerview:1.1.0"
 
     implementation 'com.squareup.picasso:picasso:2.5.2'
 
+    implementation "androidx.room:room-ktx:2.3.0-alpha04"
     implementation "androidx.room:room-runtime:2.3.0-alpha04"
     kapt "androidx.room:room-compiler:2.3.0-alpha04"
 
@@ -78,4 +79,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.jakewharton.timber:timber:4.7.1'
+
 }
